# ChangeLog for dev-php/PEAR-File_Archive
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-File_Archive/ChangeLog,v 1.6 2007/02/21 23:14:42 peper Exp $

  21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
  Transition to Manifest2.

  25 Nov 2006; Bryan Østergaard <kloeri@gentoo.org>
  PEAR-File_Archive-1.5.3.ebuild:
  Add ~alpha + ~ia64 keywords, bug 134270.

  27 May 2006; Luca Longinotti <chtekk@gentoo.org>
  PEAR-File_Archive-1.5.3.ebuild:
  Added to ~amd64. See bug #134270.

  25 May 2006; Michael Hanselmann <hansmi@gentoo.org>
  PEAR-File_Archive-1.5.3.ebuild:
  Added to ~hppa, ~ppc64, ~sparc. See bug #134270.

  25 May 2006; <nixnut@gentoo.org> PEAR-File_Archive-1.5.3.ebuild:
  Added ~ppc. bug #134270

*PEAR-File_Archive-1.5.3 (24 May 2006)

  24 May 2006; Sebastian Bergmann <sebastian@gentoo.org> +metadata.xml,
  +PEAR-File_Archive-1.5.3.ebuild:
  Initial ebuild.
