@@ -1,6 +1,12 @@
 # ChangeLog for dev-php/PEAR-File_Archive
-# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-File_Archive/ChangeLog,v 1.6 2007/02/21 23:14:42 peper Exp $
+# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
+# $Header: /var/cvsroot/gentoo-x86/dev-php/PEAR-File_Archive/ChangeLog,v 1.7 2009/08/22 18:45:12 beandog Exp $
+
+*PEAR-File_Archive-1.5.4 (22 Aug 2009)
+
+  22 Aug 2009; Steve Dibb <beandog@gentoo.org>
+  +PEAR-File_Archive-1.5.4.ebuild:
+  Version bump; add minimal use flag for mail, cache deps
 
   21 Feb 2007; Piotr Jaroszyński <peper@gentoo.org> ChangeLog:
   Transition to Manifest2.
